# code_foundation

./: .gitignore  problems.md
code_foundation_kotlin/: build.gradle.kts  settings.gradle.kts
code_foundation_python/: README.md  pyproject.toml
code_foundation_python/code_foundation/: __init__.py
code_foundation_python/code_foundation/core/: __init__.py
code_foundation_python/code_foundation/core/geometry/: basics.py  point.py  shapes.py
code_foundation_python/code_foundation/utils/: __init__.py
code_foundation_python/tests/: __init__.py
code_foundation_python/tests/test_core/: __init__.py  test_sample_core.py
code_foundation_python/tests/test_core/geometry/: test_basics.py  test_line.py  test_point.py  test_shapes.py
code_foundation_python/tests/test_utils/: __init__.py  test_sample_utils.py
